# wordNebula

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh  wordNebula.code-workspace
.devcontainer/: devcontainer.json  postCreateInstall.sh
doc/: README.md
include/: README.md  TextBuffer.hpp  WNebulaModel.hpp  WNebulaPresenter.hpp  WNebulaView.hpp
include/Model/: GapBuffer.hpp  IBuffer.hpp  TextBuffer.hpp
lib/: README.md
src/: WordNebula.cpp
src/Model/: GapBuffer.cpp  TextBuffer.cpp  WNebulaModel.cpp
src/Presenter/: WNebulaPresenter.cpp
src/View/: WNebulaView.cpp
tests/: README.md
